# jax-interval-arithmetic

./: .gitignore  CMakeLists.txt  CodeCommenter.py  Jax_CIFAR10 reduced for intervall.py  Jax_Interval_Array.py  Jax_MNIST Intervall Integration.py  Jax_MNIST_Intervall_Integration.py  Jax_Tut01.py  Jax_Tut02.py  Jax_Tut03.py  Jax_Tut04.py  Jax_mitDavid.py  Make_JaxPR_Build.ps1  OLD CMAKELists.txt  README.md  Rebuild_CMAKE_Script.bat  TODOML.txt  ffi.cpp  ffi_interface.cpp  flax.linen_CIFAR10.py  import_ctypes.py  intervall Script.txt  jax_new_interpreter.py  pyproject.toml  pytorch_nn.py  pytorch_tensor.py  pytorch_tensor_autograd.py
Outdated_Files/: Jax_MNIST extremly reduced for intervall.py  ML_notes.txt  OLD CMAKELists.txt  Testing_Comparison_ for_Jax_CIFAR10.py  ffi.cpp  ffi_python.py  pytorch_autograd_differetiaton.py
examples/formalax/: make_jaxpr.py  noxfile.py  pyproject.toml
examples/formalax/examples/ibp_training/: README.md
examples/formalax/formalax/: __init__.py
examples/formalax/formalax/bounds/: ibpimpl.py  protocols.py
examples/formalax/formalax/bounds/_src/: _affinebounds.py  _lirpabounds.py
examples/formalax/formalax/core/: batch_axes.py  markers.py
examples/formalax/formalax/sets/: box.py  protocols.py
examples/formalax/formalax/utils/: __init__.py  batch_axes.py  expand_as_diagonal.py  fun_to_jaxpr.py  jaxpr.py  pytree.py  reduce_window.py
examples/formalax/formalax/verify/: __init__.py
examples/formalax/formalax/verify/bab/: bab.py  branch_store.py  input_splitting.py
examples/formalax/tests/: README.md  random_utils.py
examples/formalax/tests/nets/: acasxu.py  flax.py  simple.py
examples/formalax/tests/resources/: .gitignore
examples/formalax/tests/test_bounds/: base_class.py  benchmarking_ibp.py  test_alpha_crown.py  test_bwlirpa.py  test_crown.py  test_ibp.py
examples/formalax/tests/test_core/: test_batch_axes.py
formalax/: .gitignore  LICENSE  README.md  make_jaxpr.py
formalax/examples/ibp_training/: emnist_params.yaml  ibp_mnist.ipynb
formalax/formalax/bounds/: __init__.py  bwlirpaimpl.py  crownimpl.py  lirpabounds.py  test.py  utils.py
formalax/formalax/bounds/_src/: _bounds.py  _bwcrown.py  _bwlirpa.py  _ibp.py
formalax/formalax/core/: zero.py
formalax/formalax/sets/: __init__.py  reals.py  singleton.py
formalax/formalax/utils/: caching.py  immutable.py  linear_util.py  name_stack.py  sets.py  zip.py
formalax/formalax/verify/bab/: __init__.py  beta_crown.py  node_splitting.py  select.py
formalax/tests/: __init__.py  conftest.py  module_cases.py  utils.py
formalax/tests/nets/: __init__.py  equinox.py  onnx.py
formalax/tests/test_bounds/: test_crown_ibp.py  test_lirpa_bounds.py
formalax/tests/test_verify/: test_input_splitting.py
my_extension/: ffi.cpp  ffi_python.py
scripts/: Intervall Arithmetics.txt  JaxPR_CIFAR10.py  JaxPR_Interpreter.py  JaxPR_NET.txt  Jax_CIFAR10.py  Statistical Learning Online Lecture.txt  ffi_python.py  flax.linen_CIFAR10_old(tf).py  pytorch_CIFAR10.py
src/jax-interval-arithmetic/: jax_new_interpreter.py
src/my_extension/: CMakeLists.txt
